--- a/source/_posts/2019-08-10-blog-note.md
+++ b/source/_posts/2019-08-10-blog-note.md
@@ -20,3 +20,5 @@ I've changed my mind about the Omigo.sh organization concept Instead, I'll be bl
 Because I am working on the new site, I haven't had time to post new content, even if it made sense.
 
 In the meantime, if you read this, you might want to [follow me on Twitter](https://twitter.com/brbcoding) (yes it's new).
+
+*Updated (August 24, 2019)* You can find the new blog at [chasingcode.dev/blog](https://chasingcode.dev/blog).
